# 3lab_postgres_fastapi

./: config.py  db.py  dbContext.py  dbModels.py  main.py  pyproject.toml
api/: comments.py  users.py
models/: BaseModels.py  CommentModel.py  UserModel.py  userModels.py
